--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "built": "webpack --config ./webpack.config.js",
     "start": "webpack-dev-server",
-    "trans": "atool-l10n"
+    "trans": "atool-l10n",
+    "eslint": "eslint client --fix"
   },
   "author": "Simon",
   "license": "ISC",
@@ -38,6 +39,7 @@
     "dva-cli": "^0.9.2",
     "dva-loading": "^2.0.1",
     "es6-promise": "^4.2.5",
+    "global": "^4.3.2",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
     "json-loader": "^0.5.7",
@@ -64,6 +66,9 @@
     "webpack-dev-server": "^3.1.3"
   },
   "devDependencies": {
+    "eslint": "^5.9.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.11.1",
     "react-router-dom": "^4.3.1",
     "webpack-cli": "^3.1.2"
   }
