--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "lib": "lib"
   },
   "scripts": {
-    "built": "webpack --config ./webpack.config.js",
-    "start": "webpack-dev-server",
+    "builtDev": "webpack --config ./webpack.dev.config.js",
+    "builtPro": "webpack --config ./webpack.pro.config.js",
+    "startDev": "webpack-dev-server --config ./webpack.dev.config.js",
+    "startPro": "webpack-dev-server --config ./webpack.pro.config.js",
+    "analyzDev": "NODE_ENV=production npm_config_report=true npm run builtDev",
     "trans": "atool-l10n",
     "eslint": "eslint client --fix"
   },
@@ -59,17 +62,22 @@
     "redux-modal": "^1.7.3",
     "redux-saga": "^0.16.0",
     "sass-loader": "^7.0.1",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.21.0",
     "typescript": "^2.8.3",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "uuid": "^3.0.1",
     "webpack": "^4.6.0",
     "webpack-dev-server": "^3.1.3"
   },
   "devDependencies": {
+    "@types/react": "^16.7.6",
+    "@types/react-dom": "^16.0.9",
     "eslint": "^5.9.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.11.1",
     "react-router-dom": "^4.3.1",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2"
   }
 }
